<resources>
    <string name="nameString">WalletWatch</string>
    <string name="headingString">WalletWatch©</string>
    <string name="docFilenameString">WalletWatch.xml</string>
    <string name="archiveFilenameString">Archive.xml</string>
    <string name="mainTab1String">Add</string>
    <string name="mainTab2String">Analytics</string>
    <string name="mainTab3String">History</string>
    <string name="amountString">Amount:</string>
    <string name="amountHintString">$ 0.00</string>
    <string name="invalidAmountString">Invalid Amount</string>
    <string name="descriptionString">Description (Optional):</string>
    <string name="dateString">Date:</string>
    <string name="calendarString">Date Selector</string>
    <string name="invalidDateString">Invalid Date</string>
    <string name="submitString">Submit the Expense by Tapping a Category:</string>
    <string name="addedEntryString">Expense Added</string>
    <string name="category1LabelString">Category 1 Label</string>
    <string name="category2LabelString">Category 2 Label</string>
    <string name="category3LabelString">Category 3 Label</string>
    <string name="allLabelString">All Categories Label</string>
    <string name="category1TotalString">Category 1 Total</string>
    <string name="category2TotalString">Category 2 Total</string>
    <string name="category3TotalString">Category 3 Total</string>
    <string name="allTotalString">All Categories Total</string>
    <string name="cancelString">Cancel</string>
    <string name="deselectAllString">0 Selected\n$ 0.00</string>
    <string name="deleteString">Delete Selected</string>
    <string name="changedEntryString">Expense Modified</string>
    <string name="deselectedEntriesString">Unchecked All Selected Entries</string>
    <string name="deletedEntriesString">Selection Deleted</string>
    <string name="editString">Edit Expense</string>
    <string name="categoryString">Category:</string>
    <string name="listString">List of Submitted Expenses</string>
    <string name="settingsString">Settings</string>
    <string name="settingsHeadingString">WalletWatch© Settings</string>
    <string name="settingsTab1String">Categories</string>
    <string name="settingsTab2String">Terms</string>
    <string name="settingsTab3String">About</string>
    <string name="category1String">Category 1:</string>
    <string name="category2String">Category 2:</string>
    <string name="category3String">Category 3:</string>
    <string name="saveString">Save Changes</string>
    <string name="changedCategoryString">Category Changed</string>
    <string name="restoredCategoryString">Category Restored</string>
    <string name="dataString">Backup and Restore:</string>
    <string name="exportString">Copy Data to Clipboard</string>
    <string name="importString">Paste Data from Clipboard into Archive</string>
    <string name="archivedString">Saved Changes to Archived Data</string>
    <string-array name="chartTypes">
        <item>Line</item>
        <item>Pie </item>
    </string-array>
    <string-array name="chartIntervals">
        <item>Last 7 Days</item>
        <item>Year To Date</item>
        <item>Last 12 Months</item>
        <item>Last Year</item>
        <item>All Time</item>
    </string-array>
    <string-array name="sortingOptions">
        <item>Date (New to Old)</item>
        <item>Date (Old to New)</item>
        <item>Price (High to Low)</item>
        <item>Price (Low to High)</item>
    </string-array>
    <string name="mottoString">
        Self-discover your spending habits with this simple, secure, and offline Android app.
    </string>
    <string name="versionString">Version 1.2.0</string>
    <string name="githubString">https://github.com/thedavidang/CSC4151</string>
    <string name="copyrightString">Copyright © 2020–2025 SpendSages</string>
</resources>