<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tab3Fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.Tab3Fragment">

    <View
        android:id="@+id/menuSpacing"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/tab2Spinners"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuSpacing">

        <Spinner
            android:id="@+id/sortingSpinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/filteringSpinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cardRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/listString"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@id/buttonSpacing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab2Spinners" />

    <View
        android:id="@+id/buttonSpacing"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/deleteButton"/>

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="#F44336"
        android:ems="10"
        android:enabled="false"
        android:text="@string/deleteString"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/footerSpacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/footerSpacing"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/editWindow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menuSpacing">

            <View
                android:id="@+id/editOverlay"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/amountLabelEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/amountFieldEdit"
                android:text="@string/amountString"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/amountFieldEdit"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textAlignment="textEnd"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:digits="0123456789."
                android:autofillHints="@string/amountHintString"
                android:maxLength="20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/amountLabelEdit" />

            <ImageView
                android:id="@+id/invalidAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/invalidAmountString"
                android:src="@android:drawable/ic_delete"
                app:layout_constraintBottom_toTopOf="@+id/amountSpacing"
                app:layout_constraintEnd_toStartOf="@+id/amountFieldEdit" />

            <View
                android:id="@+id/amountSpacing"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/amountFieldEdit" />

            <TextView
                android:id="@+id/descriptionLabelEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/descriptionHolder"
                android:text="@string/descriptionString"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/amountSpacing" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionHolder"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionLabelEdit">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionFieldEdit"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:imeOptions="actionNext"
                    android:autofillHints="@android:string/autofill"
                    android:contentDescription="@string/descriptionString"
                    android:inputType="textCapWords"
                    android:maxLength="50" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/descriptionSpacing"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionHolder" />

            <TextView
                android:id="@+id/dateLabelEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/dateFieldEdit"
                android:text="@string/dateString"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionSpacing" />

            <EditText
                android:id="@+id/dateFieldEdit"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:autofillHints=""
                android:imeOptions="actionDone"
                android:ems="6"
                android:maxLength="10"
                android:inputType="date"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dateLabelEdit" />

            <ImageButton
                android:id="@+id/dateButtonEdit"
                android:layout_width="85dp"
                android:layout_height="0dp"
                android:contentDescription="@string/calendarString"
                android:src="@android:drawable/ic_menu_my_calendar"
                app:layout_constraintBottom_toTopOf="@+id/dateSpacing"
                app:layout_constraintStart_toEndOf="@id/dateFieldEdit"
                app:layout_constraintTop_toBottomOf="@+id/descriptionSpacing" />

            <ImageView
                android:id="@+id/invalidDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/invalidDateString"
                android:src="@android:drawable/ic_delete"
                app:layout_constraintBottom_toTopOf="@+id/dateSpacing"
                app:layout_constraintEnd_toStartOf="@+id/dateFieldEdit" />

            <View
                android:id="@+id/dateSpacing"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dateFieldEdit" />

            <TextView
                android:id="@+id/categoryLabelEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categoryString"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateSpacing" />

            <RadioGroup
                android:id="@+id/categoryGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categoryLabelEdit">

                <RadioButton
                    android:id="@+id/category1ButtonEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="17"
                    android:paddingVertical="15dp"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/category2ButtonEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="17"
                    android:paddingVertical="15dp"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/category3ButtonEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="17"
                    android:paddingVertical="15dp"
                    android:textSize="18sp" />
            </RadioGroup>

            <View
                android:id="@+id/categorySpacing"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/categoryGroup" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:ems="10"
                android:text="@string/cancelString"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categorySpacing" />

            <Button
                android:id="@+id/saveEditsButton"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:ems="10"
                android:text="@string/saveString"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categorySpacing" />

            <View
                android:id="@+id/dateOverlayEdit"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CalendarView
                android:id="@+id/dateSelectorEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:contentDescription="@string/calendarString"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/cancelDateButton"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:ems="9"
                android:text="@string/cancelString"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateSelectorEdit" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>