<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/categoryFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryFragment">

    <Space
        android:id="@+id/menuSpacing"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/category1Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/category1Edit"
        android:text="@string/category1String"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuSpacing"/>

    <EditText
        android:id="@+id/category1Edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@android:string/autofill"
        android:ems="14"
        android:inputType="textCapWords"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category1Text" />

    <Space
        android:id="@+id/category1Spacing"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category1Edit" />

    <TextView
        android:id="@+id/category2Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/category2Edit"
        android:text="@string/category2String"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category1Spacing"/>

    <EditText
        android:id="@+id/category2Edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@android:string/autofill"
        android:ems="14"
        android:inputType="textCapWords"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category2Text" />

    <Space
        android:id="@+id/category2Spacing"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category2Edit" />

    <TextView
        android:id="@+id/category3Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/category3Edit"
        android:text="@string/category3String"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category2Spacing"/>

    <EditText
        android:id="@+id/category3Edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@android:string/autofill"
        android:ems="14"
        android:inputType="textCapWords"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category3Text" />

    <Space
        android:id="@+id/category3Spacing"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category3Edit" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveString"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category3Spacing" />
</androidx.constraintlayout.widget.ConstraintLayout>